# Bork

./: CMakeLists.txt  CMakePresets.json  README.md  dump.txt
src/: CMakeLists.txt  image.cpp  image.hpp  main.cpp  window.cpp  window.hpp
src/glfw/: glfw_window.cpp  glfw_window.hpp
src/input/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
src/math/: matrix.hpp  matrix_transforms.hpp  trigonometry.hpp
src/renderer/: shader.cpp  shader.hpp  texture.hpp
src/shaders/: a.spv  frag_shader.spv  fs.frag  fs.spv  vs.spv  vs.vert
src/utils/: debugging.cpp  debugging.hpp  exceptions.hpp  logging.cpp  logging.hpp
